--- a/src/app/button/button.component.html
+++ b/src/app/button/button.component.html
@@ -1,3 +1,6 @@
 <div class="content">
-  <button type="button">Click</button>
+  <button type="button" (click)="showNewIcon()">
+    Click for new icon
+  </button>
+  <span class="fa-solid fa-{{ icons[i] }}"></span>
 </div>
